--- a/frontend/src/TaskFormAdd.css
+++ b/frontend/src/TaskFormAdd.css
@@ -21,7 +21,7 @@
 }
 
 .btn-primary {
-    background-color: #1B262C;
+    background-color: black;
     border-color: #28a745;
     color: white;
     padding: 0.5rem 1rem;
