--- a/frontend/src/TasksList.css
+++ b/frontend/src/TasksList.css
@@ -27,7 +27,7 @@
 .card button {
   margin-top: 10px;
   padding: 5px 10px;
-  background-color: #007bff;
+  background-color: black;
   color: #F5F5F5;
   border: none;
   border-radius: 3px;
